<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/edit_ball_main_layout"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:elevation="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/edit_ball_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/thC"
        android:textStyle="bold"
        android:shadowColor="@color/th7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="8"
        android:text="@string/edit_the_ball"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/own_ball_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ball_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColorHint="@color/th8"
        android:textAlignment="center"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:hint="@string/own_ball_name_input"
            android:textAlignment="center"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ball_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/own_ball_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        android:textColorHint="@color/th8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/ball_manufacturer_input"
            android:textAlignment="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ball_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_manufacturer"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        android:textAlignment="center"
        android:textColorHint="@color/th8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/ball_model_input"
            android:textAlignment="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ball_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_model"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        android:gravity="center"
        android:textAlignment="center"
        android:textColorHint="@color/th8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="0"
            android:inputType="numberDecimal"
            android:hint="@string/ball_weight_input"
            android:textAlignment="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ball_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        android:gravity="center"
        android:textAlignment="center"
        android:textColorHint="@color/th8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="0"
            android:inputType="numberDecimal"
            android:hint="@string/ball_size_input"
            android:textAlignment="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ball_hardness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_size"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextInputLayoutDark"
        android:gravity="center"
        android:textAlignment="center"
        android:textColorHint="@color/th8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="0"
            android:hint="@string/ball_hardness_input"
            android:textAlignment="center"
            android:textColor="@color/th8"
            android:textColorHint="@color/th8"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/add_ball_photo"
        android:layout_width="56dp"
        android:layout_marginTop="8dp"
        android:layout_height="56dp"
        android:layout_marginLeft="48dp"
        android:layout_below="@id/ball_hardness"
        android:layout_marginRight="48dp"
        android:layout_centerHorizontal="true"
        android:textSize="0sp"
        android:background="@color/neutral_btn_color"
        android:gravity="center"
        android:padding="8dp"
        fancy:fb_defaultColor="@color/neutral_btn_color"
        fancy:fb_focusColor="@color/neutral_btn_color_ripple"
        fancy:fb_fontIconResource="&#xf030;"
        fancy:fb_fontIconSize="24sp"
        fancy:fb_iconPaddingLeft="2dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_text="@string/add_ball_photo"
        fancy:fb_radius="56dp"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/save_ball"
        android:layout_width="56dp"
        android:layout_marginTop="8dp"
        android:layout_height="56dp"
        android:layout_marginLeft="48dp"
        android:layout_below="@id/add_ball_photo"
        android:layout_marginRight="48dp"
        android:layout_centerHorizontal="true"
        android:textSize="0sp"
        android:background="@color/accept_btn_color"
        android:gravity="center"
        android:padding="8dp"
        fancy:fb_defaultColor="@color/accept_btn_color"
        fancy:fb_focusColor="@color/accept_btn_color_ripple"
        fancy:fb_fontIconResource="&#xf0c7;"
        fancy:fb_fontIconSize="24sp"
        fancy:fb_iconPaddingLeft="2dp"
        fancy:fb_iconPaddingRight="0dp"
        fancy:fb_text="@string/add_ball_photo"
        fancy:fb_radius="56dp"
        />

</RelativeLayout>