<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context="com.plightpad.AdminActivity">

    <!--<ScrollView-->
    <!--android:id="@+id/admin_scroll_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/admin_inner_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/admin_info"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/admin_info"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/admin_course_image_view"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@id/admin_info"
            android:layout_height="wrap_content"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_course_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@color/transparent"
                android:hint="@string/admin_add_city"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_add_city"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@color/transparent"
                android:hint="@string/admin_add_country"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_add_country_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@color/transparent"
                android:hint="@string/admin_add_address"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_lanes_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_add_address_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:background="@color/transparent"
                android:hint="@string/admin_add_lanes_length"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_add_lanes_length"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@color/transparent"
                android:hint="@string/admin_edit_lane_name"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admin_add_best_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_below="@id/admin_add_course_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/th8"
            app:hintTextAppearance="@style/TextInputLayoutDark">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:inputType="number"
                android:background="@color/transparent"
                android:hint="@string/admin_edit_best_score"
                android:textColor="@color/th9"
                android:textColorHint="@color/th9"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/admin_add_new_course_photo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_add_best_score"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="@color/accept_btn_color"
            android:gravity="start"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            fancy:fb_defaultColor="@color/accept_btn_color"
            fancy:fb_focusColor="@color/accept_btn_color_ripple"
            fancy:fb_fontIconResource="&#xf00c;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="45dp"
            fancy:fb_text="@string/admin_add_course_photo"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="16sp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/admin_add_new_course_lanes_photos_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_add_new_course_photo_btn"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="48dp"
            android:background="@color/accept_btn_color"
            android:gravity="start"
            android:padding="8dp"
            fancy:fb_defaultColor="@color/accept_btn_color"
            fancy:fb_focusColor="@color/accept_btn_color_ripple"
            fancy:fb_fontIconResource="&#xf00c;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="45dp"
            fancy:fb_text="@string/admin_add_course_lanes_photos"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/admin_list_view"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_add_new_course_lanes_photos_btn"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/admin_add_ready_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_list_view"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="48dp"
            android:background="@color/accept_btn_color"
            android:gravity="start"
            android:padding="8dp"
            fancy:fb_defaultColor="@color/accept_btn_color"
            fancy:fb_focusColor="@color/accept_btn_color_ripple"
            fancy:fb_fontIconResource="&#xf00c;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="45dp"
            android:layout_marginBottom="32dp"
            fancy:fb_text="@string/admin_add_ready_course"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="16sp" />

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
