<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:background="@drawable/dialog_background_shape"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/logout_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/logout_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/logout_dialog_message"
            android:layout_alignParentStart="true">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/cancel_dialog_logout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                fancy:fb_borderColor="@color/semi_transparent_black"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/decline_btn_color"
                fancy:fb_focusColor="@color/decline_btn_color_ripple"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/dialog_logout_cancel"
                fancy:fb_textColor="@color/white"
                fancy:fb_textSize="16sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:layout_weight="1"
                android:id="@+id/logout_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                fancy:fb_borderColor="@color/semi_transparent_black"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/accept_btn_color"
                fancy:fb_focusColor="@color/accept_btn_color_ripple"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/logout"
                fancy:fb_textColor="@color/white"
                fancy:fb_textSize="16sp"/>
        </LinearLayout>

    </RelativeLayout>

    <com.mikepenz.iconics.view.IconicsImageView
        android:id="@+id/logout_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="19dp"
        android:background="@color/transparent" />

</RelativeLayout>